# droids-infra

./: .gitignore  CLAUDE.md  LOGO.txt  STAKEHOLDER_BRIEF.md  droids-name.yml
.claude/agents/: ai-engineer.md  data-engineer.md  data-scientist.md  database-optimizer.md  graphql-architect.md  ml-engineer.md
.claude/commands/: clean-up.md  explain-code.md  pr.md
.github/copilot/: config.json
.github/workflows/: ci.yml
droids-agents/: .env.example  AGENTS.md  CLAUDE.md  CONTEXT.md  FUTURE-Agents.TODO  V1-droids-agents-plan.md  V1-impact-evaluation.md  competitor.json  pyproject.toml  rollup.json
droids-agents/docs/: SESSIONS-TUI-PLAN.md
droids-agents/files/: Droids-agents-PRD.md
droids-agents/src/: CLI.todo  __init__.py  cli.py  config.py  display.py  execution.py  logging.py  memquery.py  naming.py  pricing.py  router.py  runtime.py  schemas.py  sessions.py  slicing.py  tui.py
droids-agents/src/agents/: __init__.py  docs.py  form.py  messaging.py  research.py
droids-agents/src/assets/: logo.txt
droids-agents/src/guardrails/: __init__.py  docs.py  form.py  messaging.py  research.py  router.py
droids-agents/src/tools/: __init__.py  files.py  gmail.py  mem.py  playwright.py
droids-agents/tests/unit/: test_cli_validate.py  test_execution_plan.py  test_execution_result.py  test_extract_competitors.py  test_guardrails.py  test_mem_fetch.py  test_mem_write_tools.py  test_memquery.py  test_naming.py  test_playwright_tools.py  test_pricing.py  test_router_classifier.py  test_schemas.py  test_sessions.py  test_slicing.py  test_tui_browser.py  test_tui_session_view.py
droids-mem/files/: streamline.md
files/: PRD.md
