[project]
name = "droids-agents"
version = "0.1.0"
description = "Local-first multi-agent BI runtime built on agentspan, consuming droids-mem via MCP."
requires-python = ">=3.12"
authors = [{ name = "droids-agents" }]
license = { text = "MIT" }

dependencies = [
    "agentspan>=0.1.0",
    "anthropic>=0.40.0",
    "playwright>=1.45.0",
    "pypdf>=4.0.0",
    "google-api-python-client>=2.140.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
]

[project.scripts]
droids-agents = "droids_agents.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "droids_agents" = "src", "droids_agents.tools" = "src/tools", "droids_agents.guardrails" = "src/guardrails", "droids_agents.agents" = "src/agents" }
packages = ["droids_agents", "droids_agents.tools", "droids_agents.guardrails", "droids_agents.agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: spawns real droids-mem-mcp + agentspan server (slow)",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]
